spud (0.8-1) unstable; urgency=low

  * Fix broken XHTML.
  * Make timezones more flexible. Can specify UTC+nn or UTC-nn for imports.
  * Improve photo editor, have links to most popular items.
  * Fix problems with add person and set person logic.
  * Limit width of photo summary in css.
  * Optimize how search string is generated.

 -- Brian May <bam@debian.org>  Fri, 22 Apr 2011 18:22:48 +1000

spud (0.7-1) lucid; urgency=low

  * Fix error when accessing non-existant images.
  * Work around innodb bug, see http://south.aeracode.org/ticket/466.
  * Fiddle with stylesheets, etc.

 -- Brian May <brian@debian.org>  Tue, 05 Apr 2011 14:57:40 +1000

spud (0.6-1) lucid; urgency=low

  * Use secure session cookies by default.
  * Add missing error templates.
  * Other minor changes.

 -- Brian May <bam@debian.org>  Mon, 04 Apr 2011 14:57:23 +1000

spud (0.5-1) lucid; urgency=low

  * Fix typo that caused error when adding category to image.
  * Updates to templates. Good? Bad?
  * Edit now supports showing image in different sizes.

 -- Brian May <bam@debian.org>  Mon, 04 Apr 2011 10:43:47 +1000

spud (0.4-1) lucid; urgency=low

  * Enable sql transaction support by default.
  * Add ability to override src timezone and offset on per camera basis.
  * Fix errors when display photos using redirect urls.
  * Fix errors in breadcrumbs for creating albums,categories and places.
  * Add extended abilities for large image photos.

 -- Brian May <bam@debian.org>  Sat, 02 Apr 2011 16:19:01 +1100

spud (0.3-1) lucid; urgency=low

  * Add missing depends on python-pyparsing and python-imaging.
  * Add suggests on python-mysqldb.
  * Add spud_process_actions binary to package.

 -- Brian May <brian@debian.org>  Wed, 02 Mar 2011 11:28:33 +1100

spud (0.2-2) lucid; urgency=low

  * Fix postinst script.
  * Remove obsolete fastcgi stuff.
  * Turn on following symlinks under media directory.

 -- Brian May <bam@debian.org>  Tue, 19 Oct 2010 09:37:30 +1100
